async-coap-uri/proc-macros/tests/ui/assert_uri_literal/invalid_escape.stderr
error: the 2 char after '%' must be valid hex character
 --> $DIR/invalid_escape.rs:7:25
  |
7 |     assert_uri_literal!("https://www.example.com/a/%:A/c");
  |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
